[xlang:en]
CHANGELOG:


2006-02-13 2.20
- updated mymenu (for the compatibility with XoopsCube 2.1)
- modified the compatibility between "rewrite mode" and "fastest cache hack"
- added portuguesebr language files (thx Izzy)

2005-11-14 2.19
- modified the compatibilities with PHP 5.0.5
- remove CRs in some php files

2005-8-27 2.18
- modified a compatibility with XOOPS 2.1/2.2
- updated myblocksadmin into 0.40
- modified Render/Xhtml/Code.php in PEAR Text_Wiki

2005-5-31 2.17
- modified common's SPAW can use with Windows server
- updated gtickets.php
- fixed preview breaks editing mode
- modified {X_SITEURL} in all of contents will be converted to XOOPS_URL
- fixed WRAP2&3's URI to top in page navigation
- modified common SPAW with myAlbum-P as attachment manager (2.17a)

2005-5-11 2.16
- added singlecontent.php for popup etc.
- added common html header into preferences
- fixed a bug in page navigation (thx kumakichi)
- updated common's SPAW into nobunobu version based on 1.0.7 (special thx nobunobu!)
- modified you can edit with WYSIWYG editor via Firefox

2005-5-02 2.15
- fixed XSS in common's SPAW (thx nobunobu!)

2005-4-20 2.14
- added submenu unit mode into page navigation

2005-4-19 2.13
- fixed heading in SPAW
- added assigning 'xoops_default_comment_title' for "Comment Anywhere"

2005-4-17 2.12
- modified "modules/less" mode can use xoops comments
- modified WRAP2 can use xoops comments

2005-4-16 2.11
- fixed "export" doesn't check if admin of the target module.
- added the rule page of PEAR::Text_Wiki
- updated PEAR::Text_Wiki into 1.0 stable

2005-4-13 2.10
- added a field for HTML headers (check $xoops_module_header in your theme.html)
- added a field for created date
- added "export" to other TinyDs
- added "saveas/clone" in content's editor
- fixed a typo in the interface to search module by suin
- fixed a bug with treating homepage

2005-3-4 2.07
- added INDEXes into sql/tinycontent*.sql