@@ -45,7 +45,7 @@
       </td></tr></table>
       <br />
       <br />
-      <hr>
+      <hr />
       <br />
       <{$lang_comesfrom}> &nbsp; <a href="<{$site_url}>/"><{$site_url}></a><br />
       <{$lang_contentfrom}> &nbsp; <a href="<{$content_url}>"><{$content_url}></a>
