@@ -15,7 +15,7 @@
     <a href="<{$mail_link}>" target="_top"><img src="<{$mod_url}>/images/friend.gif" border="0" alt="<{$lang_sendstory}>" /></a>
   <{/if}>
   <{if $is_display_pagenav }>
-    <hr align="left" width="100%">
+    <hr align="left" width="100%" />
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
         <td width="33%" align="left" valign="top">
